...
            focused
              ? require('../../assets/icons/person_dark.png')
              : require('../../assets/icons/article_dark.png'),
        }}
      />
      <Tab.Screen
        name="메시지"
        component={Albums}
        options={{
          tabBarButtonTestID: 'albumsTestID',
          tabBarIcon: () => require('../../assets/icons/grid_dark.png'),
        }}
      />
...
