...
    name: 'Native Bottom Tabs with tabBarHidden',
  },
  {
    component: NativeBottomTabsOriginalIcons,
    name: 'Native Bottom Tabs with original icons',
  },
  { component: NativeBottomTabs, name: 'Native Bottom Tabs' },
  { component: JSBottomTabs, name: 'JS Bottom Tabs' },
  {
    component: JSBottomTabs,
    name: 'JS Bottom Tabs - No header',
    screenOptions: { headerShown: false },
  },
...
